# Cellular_Automata_Simulations

./: .gitignore  Application.c  Application.h  CMakeLists.txt  README.md  main.c
